# SDR

./: CMakeLists.txt
GCoptimization/: CMakeLists.txt
fdr/: CMakeLists.txt  Config.cmake.in  main.cpp
